[+] updated main scrollbar syiling on webkit [+] fix login buton overlaying menu buttons on small screens

--- a/src/pages/Authentication/components/Input/components/Textarea/styles.module.scss
+++ b/src/pages/Authentication/components/Input/components/Textarea/styles.module.scss
@@ -32,7 +32,14 @@
     outline: none;
 
     font-size: 16px;
-    font-family: ui-monospace,SFMono-Regular,SF Mono,Consolas,Liberation Mono,Menlo,monospace;
+    font-family:
+      ui-monospace,
+      SFMono-Regular,
+      SF Mono,
+      Consolas,
+      Liberation Mono,
+      Menlo,
+      monospace;
 
     &::-webkit-scrollbar {
       width: 3px;
